2006-07-02	Florian Boor <florian.boor@kernelconcepts.de>

    * Autotools built makefiles.
    * Major code structure changes:
      Modules code moved to "modules" subdir.
      Desktop files moved to "desktop".

2006-06-24	Florian Boor <florian.boor@kernelconcepts.de>

	* rotation.c: Enable rotation independent from target device. 
	              Check if rotation maps exist, use xmodmap application in path.
				  Some cleanups.
	* rotation.h: Some more cleanups.
	* timeanddate.c: Remove some broken code.

2006-06-08	Florian Boor <florian.boor@kernelconcepts.de>

    * suid.c, network.c: Apply patch to allow hostname changes. (by Patrick Steiner)

2006-06-07	Florian Boor <florian.boor@kernelconcepts.de>

    * Makefile: Add missing Xrandr flags and libraries.

2006-05-30	Florian Boor <florian.boor@kernelconcepts.de>

    * theme.c: Add colour helper function. Make some local functions static.
      Remove some obsolete stuff.
    * device.*: Introduce more general device name domains to have an
      additional classification for devices.
    * data/key*: Add Zaurus keyboard configuration stuff and shuffle files 
                 around.
    * pixmaps/c7x0-s1.png: New file
    * Makefile: Install new data and pixmap files.
    * applets.c: Fix two signed/unsigned warnings.
    * keyboard.c: Use glib types, add missing initialisation of portlist.
                  Fix warning.

2006-05-28	Florian Boor <florian.boor@kernelconcepts.de>

    * keys/keyctl.c: Use glib types.
                     Load platform specific configuration files from /etc/gpe.
    * device.*: Add functions to get device magic name and filenames with 
                device specific suffixes.
    * device.*: Add HTC Universal.
    * widgets/*: Remove obsolete files.
    
2006-05-26	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Fix some remaining device detection related issues.
	* serial.c: likewise
    * theme.c, Makefile: Eliminate old colour selection stuff.